fix navbar logo on mobile

--- a/src/components/navbar.module.css
+++ b/src/components/navbar.module.css
@@ -64,6 +64,10 @@
         top: 0;
     }
 
+    .logo {
+        width: auto;
+    }
+
     .links {
         display: none;
     }
